Update first-start.bat